# containerlab-vms

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  makefile-install.include  makefile-sanity.include  makefile.include  pyproject.toml  setup.cfg
examples/: README.md  xrv.clab.yml  xrv9k.clab.yml
examples/config/: mac.py
src/clab_vm_startup/: utils.py  vr.py
src/clab_vm_startup/conn_mode/: __init__.py  connection_mode.py  traffic_control.py
src/clab_vm_startup/helpers/: iosxr_console.py  telnet_client.py  utils.py
src/clab_vm_startup/host/: __init__.py  host.py  nic.py  socat.py
src/clab_vm_startup/vms/: __init__.py  vr.py  xrv.py  xrv9k.py  xrv9k_cli.py
vms/xrv/: Dockerfile  Makefile  launch.py
vms/xrv9k/: Makefile  clab_vm_startup  launch.py  xrv9k.py
