[tool.poetry]
name = "containerlab-vms"
version = "0.0.2"
description = "Toolbox for starting virtual routers inside containers."
authors = ["Inmanta <code@inmanta.com>"]
license = "Apache-2.0"
include=["src/clab_vm_startup/py.typed"]
packages = [
    { include = "clab_vm_startup", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
colorlog = "^5.0.1"

[tool.poetry.dev-dependencies]
inmanta-dev-dependencies = "1.50.0"
mypy = "^0.910"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 128
default_section = "FIRSTPARTY"

[tool.black]
line-length = 128
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
